--- a/api-reference/company/search.mdx
+++ b/api-reference/company/search.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Company Search"
-api: "GET https://api.tuesday.so/api/v1/company/search"
-description: "Search for companies using multiple filters and criteria"
+api: "POST https://api.tuesday.so/api/v1/company/search"
+description: "Search across organizational records using a rich set of filters"
 ---
 
 ## Overview
@@ -14,104 +14,294 @@ Search for companies using advanced filters including industry, size, location, 
   Your Tuesday API key
 </ParamField>
 
-## Query Parameters
+## Request Parameters
 
-<ParamField query="industry" type="string">
-  Industry or sector filter
+All parameters are optional. Combine them to filter results precisely.
+
+### 📄 Pagination
+
+<ParamField body="page" type="int" default="1">
+  Page number
+</ParamField>
+
+<ParamField body="per_page" type="int" default="25">
+  Results per page (max: 100)
+</ParamField>
+
+<ParamField body="funding" type="string" default="exclude">
+  Include funding details
   
-  **Examples:** `"Technology"`, `"Healthcare"`, `"Finance"`, `"E-commerce"`, `"SaaS"`
-</ParamField>
-
-<ParamField query="company_size" type="string">
-  Company size range by employee count
+  **Options:** `include` | `exclude`
   
-  **Options:** `"1-10"`, `"11-50"`, `"51-200"`, `"201-500"`, `"501-1000"`, `"1001-5000"`, `"5001+"`
+  **Additional Cost:** +1 credit per result when set to `include`
 </ParamField>
 
-<ParamField query="location" type="string">
-  Geographic location (city, state, country)
+<ParamField body="extra" type="string" default="exclude">
+  Include extended company details
   
-  **Examples:** `"San Francisco"`, `"California"`, `"United States"`, `"London"`
-</ParamField>
-
-<ParamField query="country" type="string">
-  Country filter (ISO codes or full names)
+  **Options:** `include` | `exclude`
   
-  **Examples:** `"US"`, `"United States"`, `"UK"`, `"Canada"`, `"Germany"`
+  **Additional Cost:** +1 credit per result when set to `include`
 </ParamField>
 
-<ParamField query="founded_year_min" type="number">
-  Minimum founding year
+<ParamField body="technology" type="string" default="exclude">
+  Include technology details
   
-  **Example:** `2015` (companies founded in 2015 or later)
-</ParamField>
-
-<ParamField query="founded_year_max" type="number">
-  Maximum founding year
+  **Options:** `include` | `exclude`
   
-  **Example:** `2020` (companies founded in 2020 or earlier)
+  **Additional Cost:** +2 credits per result when set to `include`
 </ParamField>
 
-<ParamField query="funding_stage" type="string">
-  Funding stage filter
+<ParamField body="website_traffic" type="string" default="exclude">
+  Include website traffic details
   
-  **Options:** `"Pre-Seed"`, `"Seed"`, `"Series A"`, `"Series B"`, `"Series C"`, `"Series D+"`, `"IPO"`, `"Acquired"`
-</ParamField>
-
-<ParamField query="revenue_range" type="string">
-  Annual revenue range (USD)
+  **Options:** `include` | `exclude`
   
-  **Options:** `"0-1M"`, `"1M-10M"`, `"10M-50M"`, `"50M-100M"`, `"100M-500M"`, `"500M+"`
+  **Additional Cost:** +1 credit per result when set to `include`
 </ParamField>
 
-<ParamField query="technology" type="string">
-  Technology or tools used by the company
+<ParamField body="headcount_growth" type="string" default="exclude">
+  Include headcount growth details
   
-  **Examples:** `"Salesforce"`, `"AWS"`, `"React"`, `"HubSpot"`, `"Slack"`
-</ParamField>
-
-<ParamField query="keywords" type="string">
-  Keywords to search in company descriptions and profiles
+  **Options:** `include` | `exclude`
   
-  **Examples:** `"artificial intelligence"`, `"e-commerce platform"`, `"fintech"`
+  **Additional Cost:** +1 credit per result when set to `include`
 </ParamField>
 
-<ParamField query="growth_stage" type="string">
-  Company growth stage classification
+### 👤 Person Filters
+
+<ParamField body="person_titles" type="string[]">
+  Current job titles to include
   
-  **Options:** `"Startup"`, `"Scale-up"`, `"Growth"`, `"Mature"`, `"Enterprise"`
+  **Examples:** `["CEO", "CTO", "Software Engineer"]`
 </ParamField>
 
-<ParamField query="type" type="string">
-  Company type filter
+<ParamField body="person_not_titles" type="string[]">
+  Exclude these current job titles
+</ParamField>
+
+<ParamField body="person_past_titles" type="string[]">
+  Match against past job titles
+</ParamField>
+
+<ParamField body="person_seniorities" type="string[]">
+  Filter by seniority level
   
-  **Options:** `"Public"`, `"Private"`, `"Non-profit"`, `"Government"`
+  **Examples:** `["C-Team", "Manager", "Director"]`
 </ParamField>
 
-<ParamField query="has_funding" type="boolean">
-  Filter for companies that have raised funding
+<ParamField body="person_location" type="string[]">
+  Current person location
   
-  **Options:** `true` | `false`
+  **Examples:** `["San Francisco", "California", "United States"]`
 </ParamField>
 
-<ParamField query="limit" type="number" default="10">
-  Maximum number of results to return (1-100)
+<ParamField body="not_person_location" type="string[]">
+  Exclude people in these locations
 </ParamField>
 
-<ParamField query="offset" type="number" default="0">
-  Number of results to skip for pagination
-</ParamField>
-
-<ParamField query="sort_by" type="string" default="relevance">
-  Sort order for results
+<ParamField body="person_days_in_current_title_range" type="object">
+  Days in current role/title
   
-  **Options:** `"relevance"`, `"employee_count"`, `"founded_year"`, `"funding_amount"`, `"name"`
+  **Format:** `{"min": 30, "max": 300}`
 </ParamField>
 
-<ParamField query="sort_order" type="string" default="desc">
-  Sort direction
+### 🏢 Organization Filters
+
+<ParamField body="q_organization_domains" type="string[]">
+  Match organization domains
   
-  **Options:** `"asc"` | `"desc"`
+  **Examples:** `["google.com", "microsoft.com"]`
+</ParamField>
+
+<ParamField body="not_q_organization_domains" type="string[]">
+  Exclude organizations with these domains
+</ParamField>
+
+<ParamField body="organization_location" type="string[]">
+  Company HQ/location
+  
+  **Examples:** `["San Francisco", "California", "United States"]`
+</ParamField>
+
+<ParamField body="not_organization_location" type="string[]">
+  Exclude companies in these locations
+</ParamField>
+
+<ParamField body="organization_industry" type="string[]">
+  Include companies in these industries
+  
+  **Examples:** `["Technology", "Healthcare", "Finance"]`
+</ParamField>
+
+<ParamField body="organization_not_industry" type="string[]">
+  Exclude companies from these industries
+</ParamField>
+
+<ParamField body="organization_sic_industry" type="string[]">
+  Filter by SIC codes
+  
+  **Examples:** `["0919"]`
+</ParamField>
+
+<ParamField body="organization_not_sic_industry" type="string[]">
+  Exclude SIC codes
+</ParamField>
+
+<ParamField body="organization_naics_industry" type="string[]">
+  Filter by NAICS codes
+  
+  **Examples:** `["236117"]`
+</ParamField>
+
+<ParamField body="organization_not_naics_industry" type="string[]">
+  Exclude NAICS codes
+</ParamField>
+
+<ParamField body="organization_revenue_ranges" type="string[]">
+  Revenue ranges
+  
+  **Examples:** `["<$1M", "$1M-$10M", "$10M-$50M"]`
+</ParamField>
+
+### 📱 Technology & Product Filters
+
+<ParamField body="organization_technology" type="string[]">
+  Include if they use any of these tools
+  
+  **Examples:** `["Salesforce", "AWS", "React"]`
+</ParamField>
+
+<ParamField body="organization_all_technology" type="string[]">
+  Must use all listed technologies
+</ParamField>
+
+<ParamField body="not_organization_technology" type="string[]">
+  Exclude if using any of these technologies
+</ParamField>
+
+<ParamField body="organization_has_web_app" type="boolean">
+  Has a web application?
+</ParamField>
+
+<ParamField body="organization_has_mobile_app" type="boolean">
+  Has a mobile application?
+</ParamField>
+
+<ParamField body="organization_appstore_app_category" type="string[]">
+  AppStore categories
+  
+  **Examples:** `["News", "Finance"]`
+</ParamField>
+
+<ParamField body="organization_playstore_app_category" type="string[]">
+  PlayStore categories
+  
+  **Examples:** `["Car race", "Games"]`
+</ParamField>
+
+<ParamField body="organization_appstore_rating" type="object">
+  iOS app rating (1–5)
+  
+  **Format:** `{"min": 4, "max": 5}`
+</ParamField>
+
+<ParamField body="organization_playstore_rating" type="object">
+  Android app rating (1–5)
+  
+  **Format:** `{"min": 4, "max": 5}`
+</ParamField>
+
+<ParamField body="organization_appstore_review_count" type="object">
+  Number of iOS reviews
+  
+  **Format:** `{"min": 100, "max": 10000}`
+</ParamField>
+
+<ParamField body="organization_playstore_review_count" type="object">
+  Number of Android reviews
+  
+  **Format:** `{"min": 100, "max": 10000}`
+</ParamField>
+
+<ParamField body="organization_is_website_for_sale" type="boolean">
+  Website listed for sale?
+</ParamField>
+
+### 📈 Web Traffic & Ads
+
+<ParamField body="organization_website_traffic_total_monthly" type="object">
+  Total monthly visits
+  
+  **Format:** `{"min": 1000, "max": 100000}`
+</ParamField>
+
+<ParamField body="organization_website_traffic_monthly_organic" type="object">
+  Monthly organic traffic
+  
+  **Format:** `{"min": 1000, "max": 100000}`
+</ParamField>
+
+<ParamField body="organization_website_traffic_monthly_paid" type="object">
+  Monthly paid traffic
+  
+  **Format:** `{"min": 1000, "max": 100000}`
+</ParamField>
+
+<ParamField body="organization_monthly_google_adspend" type="object">
+  Estimated monthly Google Ads spend ($)
+  
+  **Format:** `{"min": 1000, "max": 50000}`
+</ParamField>
+
+### 💰 Funding Filters
+
+<ParamField body="organization_funding_amount" type="object">
+  Last round amount
+  
+  **Format:** `{"min": 1000000, "max": 100000000}`
+</ParamField>
+
+<ParamField body="organization_funding_total_amount" type="object">
+  Total raised funding
+  
+  **Format:** `{"min": 1000000, "max": 100000000}`
+</ParamField>
+
+<ParamField body="organization_funding_date" type="object">
+  Months since last funding round
+  
+  **Format:** `{"min": 1, "max": 24}`
+</ParamField>
+
+<ParamField body="organization_funding_type" type="string[]">
+  Funding stage
+  
+  **Examples:** `["Seed", "Series A", "Series B"]`
+</ParamField>
+
+<ParamField body="organization_funding_lead_investors" type="string[]">
+  Names of lead investors
+</ParamField>
+
+<ParamField body="organization_funding_number_of_investors" type="object">
+  Number of investors in the last round
+  
+  **Format:** `{"min": 1, "max": 10}`
+</ParamField>
+
+### 👨‍💼 Team & Roles
+
+<ParamField body="organization_roles_count" type="object[]">
+  Role distribution by department & range
+  
+  **Format:** `[{"department": "android_dev", "range": {"min": 1, "max": 100}}]`
+</ParamField>
+
+<ParamField body="organization_open_roles_count" type="object[]">
+  Open roles per department with range
+  
+  **Format:** `[{"department": "sales", "range": {"min": 1, "max": 10}}]`
 </ParamField>
 
 ## Response
@@ -124,6 +314,9 @@ Search for companies using advanced filters including industry, size, location, 
     <ResponseField name="name" type="string">
       Company name
     </ResponseField>
+    <ResponseField name="about_us" type="string">
+      Company description
+    </ResponseField>
     <ResponseField name="linkedin_url" type="string">
       LinkedIn company page URL
     </ResponseField>
@@ -133,91 +326,110 @@ Search for companies using advanced filters including industry, size, location, 
     <ResponseField name="primary_domain" type="string">
       Primary domain name
     </ResponseField>
-    <ResponseField name="description" type="string">
-      Company description
-    </ResponseField>
     <ResponseField name="industry" type="string">
       Primary industry
     </ResponseField>
-    <ResponseField name="specialities" type="array">
-      Company specialities and focus areas
+    <ResponseField name="specialties" type="string">
+      Company specialities and focus areas (semicolon-separated)
     </ResponseField>
     <ResponseField name="founded_year" type="number">
       Year founded
     </ResponseField>
-    <ResponseField name="company_size" type="string">
-      Employee count range
+    <ResponseField name="employee_count_range" type="string">
+      Employee count range (e.g., "11 to 50")
     </ResponseField>
-    <ResponseField name="employee_count" type="number">
-      Estimated employee count
+    <ResponseField name="employee_on_linkedin_growth_rate" type="number">
+      LinkedIn employee growth rate (percentage)
     </ResponseField>
-    <ResponseField name="headquarters" type="object">
-      Headquarters location details
+    <ResponseField name="city" type="string">
+      Company city
     </ResponseField>
-    <ResponseField name="logo_url" type="string">
-      Company logo URL
+    <ResponseField name="state" type="string">
+      Company state/region
     </ResponseField>
-    <ResponseField name="type" type="string">
-      Company type (Public, Private, etc.)
+    <ResponseField name="country" type="string">
+      Company country
     </ResponseField>
-    <ResponseField name="funding_summary" type="object">
-      <Expandable title="Funding Information">
-        <ResponseField name="total_funding" type="number">
-          Total funding raised (USD)
-        </ResponseField>
-        <ResponseField name="last_funding_stage" type="string">
-          Most recent funding stage
-        </ResponseField>
-        <ResponseField name="last_funding_date" type="string">
-          Date of last funding round
-        </ResponseField>
-        <ResponseField name="last_funding_amount" type="number">
-          Amount of last funding round
-        </ResponseField>
-      </Expandable>
+    <ResponseField name="country_code" type="string">
+      ISO country code
     </ResponseField>
-    <ResponseField name="growth_metrics" type="object">
-      <Expandable title="Growth Indicators">
-        <ResponseField name="employee_growth_rate" type="number">
-          Annual employee growth rate (percentage)
-        </ResponseField>
-        <ResponseField name="growth_stage" type="string">
-          Growth classification
-        </ResponseField>
-        <ResponseField name="recent_hires" type="number">
-          Recent hiring activity (30 days)
-        </ResponseField>
-      </Expandable>
+    <ResponseField name="country_region" type="string">
+      Geographic region (NORAM, EMEA, APAC, LATAM)
     </ResponseField>
-    <ResponseField name="technology_stack" type="array">
-      Technologies and tools used (when available)
+    <ResponseField name="headquarters.*" type="object">
+      Headquarters location details (flattened)
+    </ResponseField>
+    <ResponseField name="phone" type="string">
+      Company phone number
+    </ResponseField>
+    <ResponseField name="postcode" type="string">
+      Postal code
+    </ResponseField>
+    <ResponseField name="street" type="string">
+      Street address
+    </ResponseField>
+    <ResponseField name="revenue_range" type="string">
+      Revenue range (e.g., "$1M to <$10M")
+    </ResponseField>
+    <ResponseField name="has_cio" type="string">
+      Has CIO position ("Yes", "No", "Unknown")
+    </ResponseField>
+    <ResponseField name="has_ciso" type="string">
+      Has CISO position ("Yes", "No", "Unknown")
+    </ResponseField>
+    <ResponseField name="has_mobile_app" type="boolean">
+      Has mobile application
+    </ResponseField>
+    <ResponseField name="has_web_app" type="boolean">
+      Has web application
+    </ResponseField>
+    <ResponseField name="is_website_for_sale" type="boolean">
+      Website listed for sale
+    </ResponseField>
+    <ResponseField name="is_linkedin_url_claimed" type="string">
+      LinkedIn URL claimed status
+    </ResponseField>
+    <ResponseField name="location_continent" type="string">
+      Continent location
+    </ResponseField>
+    <ResponseField name="location_count" type="number">
+      Number of locations
+    </ResponseField>
+    <ResponseField name="valid_email_count" type="string">
+      Number of valid email addresses
+    </ResponseField>
+    <ResponseField name="role_count.*" type="number">
+      Role counts by department (flattened)
+    </ResponseField>
+    <ResponseField name="open_roles_count.*" type="number">
+      Open role counts by department (flattened)
+    </ResponseField>
+    <ResponseField name="industry_details.*" type="string">
+      Industry classification details (flattened)
+    </ResponseField>
+    <ResponseField name="technologies.*" type="string">
+      Technology stack details (flattened)
+    </ResponseField>
+    <ResponseField name="website_traffic.*" type="number">
+      Website traffic metrics (flattened)
+    </ResponseField>
+    <ResponseField name="appstore.*" type="string/number">
+      App Store details (flattened)
+    </ResponseField>
+    <ResponseField name="playstore.*" type="string/number">
+      Play Store details (flattened)
+    </ResponseField>
+    <ResponseField name="monthly_google_adspend" type="number">
+      Monthly Google Ads spend
+    </ResponseField>
+    <ResponseField name="total_reviews" type="number">
+      Total app reviews
     </ResponseField>
   </Expandable>
-</ResponseField>
-
-<ResponseField name="pagination" type="object">
-  <Expandable title="Pagination Details">
-    <ResponseField name="total" type="number">
-      Total number of matching companies
-    </ResponseField>
-    <ResponseField name="limit" type="number">
-      Number of results per page
-    </ResponseField>
-    <ResponseField name="offset" type="number">
-      Current offset
-    </ResponseField>
-    <ResponseField name="has_more" type="boolean">
-      Whether more results are available
-    </ResponseField>
-  </Expandable>
-</ResponseField>
-
-<ResponseField name="filters_applied" type="object">
-  Summary of filters used in the search
 </ResponseField>
 
 <ResponseField name="statusCode" type="number">
-  HTTP status code (200 for success)
+  HTTP status code (201 for success)
 </ResponseField>
 
 <ResponseField name="message" type="string">
@@ -228,31 +440,59 @@ Search for companies using advanced filters including industry, size, location, 
 
 <CodeGroup>
 
-```bash SaaS Startups
-curl --location 'https://api.tuesday.so/api/v1/company/search?industry=SaaS&company_size=11-50&founded_year_min=2020&location=California' \
---header 'X-API-KEY: your-api-key-here'
+```bash Basic Company Search
+curl --location 'https://api.tuesday.so/api/v1/company/search' \
+--header 'X-API-KEY: your-api-key-here' \
+--header 'Content-Type: application/json' \
+--data '{
+    "page": 1,
+    "per_page": 25,
+    "person_titles": ["Software Engineer"],
+    "funding": "include",
+    "technology": "include",
+    "website_traffic": "include",
+    "headcount_growth": "include",
+    "extra": "include"
+}'
 ```
 
 ```bash Funded E-commerce Companies
-curl --location 'https://api.tuesday.so/api/v1/company/search?industry=E-commerce&funding_stage=Series%20A&has_funding=true&sort_by=funding_amount' \
---header 'X-API-KEY: your-api-key-here'
+curl --location 'https://api.tuesday.so/api/v1/company/search' \
+--header 'X-API-KEY: your-api-key-here' \
+--header 'Content-Type: application/json' \
+--data '{
+    "page": 1,
+    "per_page": 25,
+    "organization_industry": ["E-commerce"],
+    "organization_funding_type": ["Series A"],
+    "funding": "include"
+}'
 ```
 
 ```bash Large Tech Companies
-curl --location 'https://api.tuesday.so/api/v1/company/search?industry=Technology&company_size=5001%2B&country=US&sort_by=employee_count' \
---header 'X-API-KEY: your-api-key-here'
+curl --location 'https://api.tuesday.so/api/v1/company/search' \
+--header 'X-API-KEY: your-api-key-here' \
+--header 'Content-Type: application/json' \
+--data '{
+    "page": 1,
+    "per_page": 25,
+    "organization_industry": ["Technology"],
+    "organization_location": ["United States"],
+    "extra": "include"
+}'
 ```
 
 ```javascript JavaScript
-const searchCompanies = async (filters = {}) => {
-  const params = new URLSearchParams(filters);
-
+const searchCompanies = async (payload) => {
   const response = await fetch(
-    `https://api.tuesday.so/api/v1/company/search?${params}`,
+    'https://api.tuesday.so/api/v1/company/search',
     {
+      method: 'POST',
       headers: {
-        'X-API-KEY': 'your-api-key-here'
-      }
+        'X-API-KEY': 'your-api-key-here',
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify(payload)
     }
   );
 
@@ -262,27 +502,28 @@ const searchCompanies = async (filters = {}) => {
 
 // Usage Examples
 const techStartups = await searchCompanies({
-  industry: 'Technology',
-  founded_year_min: 2020,
-  company_size: '11-50',
-  location: 'San Francisco',
-  has_funding: true,
-  limit: 25
+  page: 1,
+  per_page: 25,
+  organization_industry: ['Technology'],
+  person_titles: ['Software Engineer'],
+  funding: 'include',
+  technology: 'include'
 });
 
 const aiCompanies = await searchCompanies({
-  keywords: 'artificial intelligence',
-  funding_stage: 'Series A',
-  country: 'US',
-  sort_by: 'funding_amount',
-  sort_order: 'desc'
+  page: 1,
+  per_page: 25,
+  organization_technology: ['artificial intelligence'],
+  organization_funding_type: ['Series A'],
+  funding: 'include'
 });
 
 const ecommerceScale = await searchCompanies({
-  industry: 'E-commerce',
-  company_size: '201-500',
-  growth_stage: 'Scale-up',
-  technology: 'Shopify'
+  page: 1,
+  per_page: 25,
+  organization_industry: ['E-commerce'],
+  organization_technology: ['Shopify'],
+  extra: 'include'
 });
 
 console.log(`Found ${techStartups.data.length} tech startups`);
@@ -291,66 +532,63 @@ console.log(`Found ${techStartups.data.length} tech startups`);
 ```python Python
 import requests
 
-def search_companies(**filters):
+def search_companies(payload):
     url = "https://api.tuesday.so/api/v1/company/search"
-    headers = {'X-API-KEY': 'your-api-key-here'}
+    headers = {
+        'X-API-KEY': 'your-api-key-here',
+        'Content-Type': 'application/json'
+    }
     
-    response = requests.get(url, params=filters, headers=headers)
+    response = requests.post(url, json=payload, headers=headers)
     return response.json()
 
 # Usage Examples
 # Find SaaS companies in growth stage
-saas_companies = search_companies(
-    industry='SaaS',
-    growth_stage='Growth',
-    company_size='501-1000',
-    country='US',
-    limit=50
-)
+saas_companies = search_companies({
+    "page": 1,
+    "per_page": 25,
+    "organization_industry": ["SaaS"],
+    "person_titles": ["Software Engineer"],
+    "funding": "include",
+    "technology": "include"
+})
 
 # Find well-funded AI startups
-ai_startups = search_companies(
-    keywords='artificial intelligence machine learning',
-    founded_year_min=2018,
-    funding_stage='Series B',
-    sort_by='funding_amount',
-    sort_order='desc'
-)
+ai_startups = search_companies({
+    "page": 1,
+    "per_page": 25,
+    "organization_technology": ["artificial intelligence", "machine learning"],
+    "organization_funding_type": ["Series B"],
+    "funding": "include"
+})
 
 # Find tech companies using specific technology
-react_companies = search_companies(
-    technology='React',
-    industry='Technology',
-    company_size='51-200',
-    location='California'
-)
-
-# Find healthcare companies by revenue
-healthcare_companies = search_companies(
-    industry='Healthcare',
-    revenue_range='10M-50M',
-    type='Private',
-    sort_by='employee_count'
-)
+react_companies = search_companies({
+    "page": 1,
+    "per_page": 25,
+    "organization_technology": ["React"],
+    "organization_industry": ["Technology"],
+    "organization_location": ["California"],
+    "technology": "include"
+})
 
 for company in saas_companies['data']:
-    print(f"{company['name']} - {company['employee_count']} employees")
-    print(f"Founded: {company['founded_year']} | Industry: {company['industry']}")
-    if company.get('funding_summary'):
-        print(f"Funding: ${company['funding_summary']['total_funding']:,}")
+    print(f"{company['name']} - {company.get('employee_count_range', 'N/A')} employees")
+    print(f"Founded: {company.get('founded_year', 'N/A')} | Industry: {company.get('industry', 'N/A')}")
     print("---")
 ```
 
 ```php PHP
 <?php
-function searchCompanies($filters = []) {
-    $queryString = http_build_query($filters);
-    
+function searchCompanies($payload) {
     $ch = curl_init();
-    curl_setopt($ch, CURLOPT_URL, "https://api.tuesday.so/api/v1/company/search?$queryString");
+    curl_setopt($ch, CURLOPT_URL, "https://api.tuesday.so/api/v1/company/search");
     curl_setopt($ch, CURLOPT_RETURNTRANSFER, true);
+    curl_setopt($ch, CURLOPT_POST, true);
+    curl_setopt($ch, CURLOPT_POSTFIELDS, json_encode($payload));
     curl_setopt($ch, CURLOPT_HTTPHEADER, [
-        'X-API-KEY: your-api-key-here'
+        'X-API-KEY: your-api-key-here',
+        'Content-Type: application/json'
     ]);
     
     $response = curl_exec($ch);
@@ -361,24 +599,25 @@ function searchCompanies($filters = []) {
 
 // Usage Examples
 $fintechStartups = searchCompanies([
-    'industry' => 'Fintech',
-    'founded_year_min' => 2019,
-    'company_size' => '11-50',
-    'has_funding' => true,
-    'limit' => 30
+    'page' => 1,
+    'per_page' => 25,
+    'organization_industry' => ['Fintech'],
+    'person_titles' => ['Software Engineer'],
+    'funding' => 'include',
+    'technology' => 'include'
 ]);
 
 $techGiants = searchCompanies([
-    'industry' => 'Technology',
-    'company_size' => '5001+',
-    'type' => 'Public',
-    'sort_by' => 'employee_count',
-    'sort_order' => 'desc'
+    'page' => 1,
+    'per_page' => 25,
+    'organization_industry' => ['Technology'],
+    'organization_location' => ['United States'],
+    'extra' => 'include'
 ]);
 
 foreach ($fintechStartups['data'] as $company) {
-    echo $company['name'] . " - " . $company['description'] . "\n";
-    echo "Employees: " . $company['employee_count'] . "\n";
+    echo $company['name'] . " - " . $company['about_us'] . "\n";
+    echo "Employees: " . $company['employee_count_range'] . "\n";
     echo "Founded: " . $company['founded_year'] . "\n\n";
 }
 ?>
@@ -394,105 +633,101 @@ foreach ($fintechStartups['data'] as $company) {
 {
     "data": [
         {
-            "id": "tu_cmp_stripe",
-            "name": "Stripe",
-            "linkedin_url": "https://www.linkedin.com/company/stripe",
-            "website_url": "https://stripe.com",
-            "primary_domain": "stripe.com",
-            "description": "Stripe is a technology company that builds economic infrastructure for the internet.",
-            "industry": "Fintech",
-            "specialities": [
-                "Payments",
-                "APIs",
-                "Financial Infrastructure",
-                "Developer Tools"
-            ],
-            "founded_year": 2010,
-            "company_size": "1001-5000",
-            "employee_count": 4000,
-            "headquarters": {
-                "city": "San Francisco",
-                "state": "California",
-                "country": "United States"
-            },
-            "logo_url": "https://logo.clearbit.com/stripe.com",
-            "type": "Private",
-            "funding_summary": {
-                "total_funding": 2200000000,
-                "last_funding_stage": "Series I",
-                "last_funding_date": "2023-03-14",
-                "last_funding_amount": 6500000000
-            },
-            "growth_metrics": {
-                "employee_growth_rate": 25.4,
-                "growth_stage": "Scale-up",
-                "recent_hires": 120
-            },
-            "technology_stack": [
-                "Ruby",
-                "Python",
-                "React",
-                "AWS",
-                "Kubernetes"
-            ]
+            "about_us": "Welcome to the official page of Cartão de TODOS on LinkedIn! We are pioneers in the country, with a successful and established business model, serving over 5 million families in all Brazilian states.",
+            "appstore.app_category": "Finance",
+            "appstore.last_update": "2024-01-11",
+            "appstore.top_rating": 4.9,
+            "appstore.top_review_count": 32935,
+            "appstore.top_url": "https://apps.apple.com/br/app/id1536693230",
+            "appstore.update_count": 25,
+            "city": "Ipatinga",
+            "country": "Brazil",
+            "country_code": "BR",
+            "country_region": "LATAM",
+            "employee_count_range": "5001 to 10000",
+            "employee_on_linkedin_growth_rate": 3,
+            "has_cio": "Unknown",
+            "has_ciso": "Unknown",
+            "has_mobile_app": true,
+            "has_web_app": false,
+            "headquarters.city": "Ipatinga",
+            "headquarters.country_name": "Brazil",
+            "headquarters.state": "Minas Gerais",
+            "id": "tu_oacdlz2wb",
+            "industry": "Wellness and Fitness Services",
+            "industry_details.naics_code": "541611;541512;459999",
+            "industry_details.naics_description": "Administrative Management and General Management Consulting Services;Computer Systems Design Services;All Other Miscellaneous Retailers",
+            "is_linkedin_url_claimed": "true",
+            "is_website_for_sale": false,
+            "linkedin_url": "https://www.linkedin.com/company/cartao-de-todos",
+            "location_continent": "South America",
+            "location_count": 1,
+            "name": "Cartão De Todos",
+            "playstore.app_category": "Finance",
+            "playstore.download_count": 5028400,
+            "playstore.last_update": "2024-01-09",
+            "playstore.top_rating": 3,
+            "playstore.top_review_count": 399303,
+            "playstore.top_url": "https://play.google.com/store/apps/details?id=com.cartaodetodoswalletapp",
+            "postcode": "35162-399",
+            "primary_domain": "cartaodetodos.com.br",
+            "role_count.business_development": 1,
+            "role_count.engineer": 1,
+            "role_count.it": 27,
+            "role_count.marketing": 45,
+            "role_count.sales": 3,
+            "specialties": "clínica médica;serviços;saúde;odontologia;educação a distância;lazer;descontos",
+            "state": "Minas Gerais",
+            "street": "37 Rua Dom Pedro Ii",
+            "technologies.automation": "Hubspot",
+            "technologies.cloud_provider": "Microsoft Azure",
+            "technologies.cms": "Hubspot",
+            "technologies.crm": "Hubspot",
+            "technologies.email_hosting": "Microsoft",
+            "total_reviews": 432238,
+            "website_traffic.monthly_organic": 94,
+            "website_traffic.total_monthly": 94,
+            "website_url": "https://cartaodetodos.com.br"
         },
         {
-            "id": "tu_cmp_plaid",
-            "name": "Plaid",
-            "linkedin_url": "https://www.linkedin.com/company/plaid-",
-            "website_url": "https://plaid.com",
-            "primary_domain": "plaid.com",
-            "description": "Plaid is a financial services company that enables applications to connect with users' bank accounts.",
-            "industry": "Fintech",
-            "specialities": [
-                "Open Banking",
-                "API",
-                "Financial Data",
-                "Developer Platform"
-            ],
-            "founded_year": 2013,
-            "company_size": "501-1000",
-            "employee_count": 800,
-            "headquarters": {
-                "city": "San Francisco",
-                "state": "California",
-                "country": "United States"
-            },
-            "logo_url": "https://logo.clearbit.com/plaid.com",
-            "type": "Private",
-            "funding_summary": {
-                "total_funding": 734000000,
-                "last_funding_stage": "Series D",
-                "last_funding_date": "2021-04-07",
-                "last_funding_amount": 425000000
-            },
-            "growth_metrics": {
-                "employee_growth_rate": 18.2,
-                "growth_stage": "Growth",
-                "recent_hires": 45
-            },
-            "technology_stack": [
-                "Go",
-                "Node.js",
-                "React",
-                "AWS",
-                "PostgreSQL"
-            ]
+            "about_us": "Seal Distributors Inc is a company specializing in the Fluid Sealing industry and is located at 200 Tech Dr, Sanford, Florida, United States.",
+            "city": "Sanford",
+            "country": "United States",
+            "country_code": "US",
+            "country_region": "NORAM",
+            "employee_count_range": "11 to 50",
+            "founded_year": 1985,
+            "has_cio": "Unknown",
+            "has_ciso": "Unknown",
+            "has_mobile_app": false,
+            "has_web_app": false,
+            "headquarters.city": "Sanford",
+            "headquarters.country_name": "United States",
+            "headquarters.state": "Florida",
+            "id": "tu_oab7ugt2z",
+            "industry": "Wholesale",
+            "industry_details.naics_code": "423840;339991;325520",
+            "industry_details.naics_description": "Industrial Supplies Merchant Wholesalers;Gasket; Packing; and Sealing Device Manufacturing;Adhesive Manufacturing",
+            "is_linkedin_url_claimed": "true",
+            "is_website_for_sale": false,
+            "linkedin_url": "https://www.linkedin.com/company/seal-distributors-inc",
+            "location_continent": "North America",
+            "location_count": 1,
+            "name": "Seal Distributors Inc",
+            "phone": "+1 800-334-1711",
+            "postcode": "32771-6662",
+            "primary_domain": "sealdistributors.com",
+            "revenue_range": "$1M to <$10M",
+            "role_count.sales": 3,
+            "state": "Florida",
+            "street": "200 Tech Dr",
+            "valid_email_count": "5",
+            "website_traffic.monthly_organic": 163,
+            "website_traffic.total_monthly": 163,
+            "website_url": "https://www.sealdistributors.com"
         }
     ],
-    "pagination": {
-        "total": 1547,
-        "limit": 10,
-        "offset": 0,
-        "has_more": true
-    },
-    "filters_applied": {
-        "industry": "Fintech",
-        "company_size": "501-1000,1001-5000",
-        "country": "US",
-        "has_funding": true
-    },
-    "statusCode": 200,
+    "statusCode": 201,
     "message": "Success"
 }
 ```
@@ -556,14 +791,32 @@ foreach ($fintechStartups['data'] as $company) {
 
 ## Credit Usage
 
-<div className="border rounded-lg p-4 text-center my-6">
-      <div className="text-3xl font-bold text-blue-600">{1}</div>
-  <div className="text-sm text-gray-600">Credit per company result</div>
+<div className="grid grid-cols-1 md:grid-cols-3 gap-4 my-6">
+  <div className="border rounded-lg p-4 text-center">
+    <div className="text-2xl font-bold text-blue-600">{1}</div>
+    <div className="text-sm text-gray-600">Base per result</div>
+  </div>
+  <div className="border rounded-lg p-4 text-center">
+    <div className="text-2xl font-bold text-orange-600">{"+1"}</div>
+    <div className="text-sm text-gray-600">Funding/Extra/Web Traffic/Headcount per result</div>
+  </div>
+  <div className="border rounded-lg p-4 text-center">
+    <div className="text-2xl font-bold text-red-600">{"+2"}</div>
+    <div className="text-sm text-gray-600">Technology per result</div>
+  </div>
 </div>
 
-<Note>
-Each company returned in the search results costs 1 credit. Use specific filters to narrow results and optimize costs.
-</Note>
+<Warning>
+**Cost Calculation Example:**
+- Search returning 20 results with all enrichments enabled
+- Base cost: 20 × 1 = 20 credits
+- Funding enrichment: 20 × 1 = 20 credits  
+- Technology enrichment: 20 × 2 = 40 credits
+- Extra enrichment: 20 × 1 = 20 credits
+- Website traffic enrichment: 20 × 1 = 20 credits
+- Headcount growth enrichment: 20 × 1 = 20 credits
+- **Total: 140 credits**
+</Warning>
 
 ## Advanced Filtering Combinations
 
