--- a/api-reference/people/search.mdx
+++ b/api-reference/people/search.mdx
@@ -1,7 +1,7 @@
 ---
 title: "People Search"
-api: "GET https://api.tuesday.so/api/v1/people/search"
-description: "Advanced search for people with multiple filters and criteria"
+api: "POST https://api.tuesday.so/api/v1/people/search"
+description: "Search across professional records using a rich set of filters"
 ---
 
 ## Overview
@@ -14,76 +14,268 @@ Search for people using advanced filters and criteria. This endpoint allows you 
   Your Tuesday API key
 </ParamField>
 
-## Query Parameters
+## Request Parameters
 
-<ParamField query="company_domain" type="string">
-  Company domain to search within (e.g., `google.com`, `microsoft.com`)
+All parameters are optional. Combine them to filter results precisely.
+
+### 📄 Pagination
+
+<ParamField body="page" type="int" default="1">
+  Page number
 </ParamField>
 
-<ParamField query="title" type="string">
-  Job title or role (supports partial matches)
-  
-  **Examples:** `"Sales Director"`, `"Software Engineer"`, `"Marketing"`
+<ParamField body="per_page" type="int" default="25">
+  Results per page (max: 100)
 </ParamField>
 
-<ParamField query="seniority" type="string">
-  Seniority level filter
-  
-  **Options:** `"C-Suite"`, `"VP"`, `"Director"`, `"Manager"`, `"Senior"`, `"Staff"`, `"Intern"`
-</ParamField>
-
-<ParamField query="location" type="string">
-  Geographic location (city, state, country)
-  
-  **Examples:** `"San Francisco"`, `"California"`, `"United States"`, `"London"`
-</ParamField>
-
-<ParamField query="country" type="string">
-  Country filter (ISO country codes or full names)
-  
-  **Examples:** `"US"`, `"United States"`, `"UK"`, `"Germany"`
-</ParamField>
-
-<ParamField query="industry" type="string">
-  Industry or sector filter
-  
-  **Examples:** `"Technology"`, `"Healthcare"`, `"Finance"`, `"Consulting"`
-</ParamField>
-
-<ParamField query="company_size" type="string">
-  Company size range
-  
-  **Options:** `"1-10"`, `"11-50"`, `"51-200"`, `"201-500"`, `"501-1000"`, `"1001-5000"`, `"5001+"`
-</ParamField>
-
-<ParamField query="keywords" type="string">
-  Keywords to search in profiles and descriptions
-  
-  **Examples:** `"machine learning"`, `"sales automation"`, `"digital marketing"`
-</ParamField>
-
-<ParamField query="limit" type="number" default="10">
-  Maximum number of results to return (1-100)
-</ParamField>
-
-<ParamField query="offset" type="number" default="0">
-  Number of results to skip for pagination
-</ParamField>
-
-<ParamField query="include_email" type="string" default="exclude">
-  Include email addresses in results
+<ParamField body="include_email" type="string" default="exclude">
+  Include email address
   
   **Options:** `include` | `exclude`
   
   **Additional Cost:** +2 credits per result when set to `include`
 </ParamField>
 
-<ParamField query="include_phone" type="string" default="exclude">
-  Include phone numbers in results
+<ParamField body="include_phone" type="string" default="exclude">
+  Include phone number
   
   **Options:** `include` | `exclude`
   
   **Additional Cost:** +3 credits per result when set to `include`
+</ParamField>
+
+### 👤 Person Filters
+
+<ParamField body="person_titles" type="string[]">
+  Current job titles to include
+  
+  **Examples:** `["Software Engineer", "Senior Developer"]`
+</ParamField>
+
+<ParamField body="person_not_titles" type="string[]">
+  Exclude these current job titles
+</ParamField>
+
+<ParamField body="person_past_titles" type="string[]">
+  Match against past job titles
+</ParamField>
+
+<ParamField body="person_seniorities" type="string[]">
+  Filter by seniority level
+  
+  **Examples:** `["C-Team", "Manager", "Director"]`
+</ParamField>
+
+<ParamField body="person_location" type="string[]">
+  Current person location
+  
+  **Examples:** `["San Francisco", "California", "United States"]`
+</ParamField>
+
+<ParamField body="not_person_location" type="string[]">
+  Exclude people in these locations
+</ParamField>
+
+<ParamField body="person_days_in_current_title_range" type="object">
+  Days in current role/title
+  
+  **Format:** `{"min": 30, "max": 300}`
+</ParamField>
+
+### 🏢 Organization Filters
+
+<ParamField body="q_organization_domains" type="string[]">
+  Match organization domains
+  
+  **Examples:** `["google.com", "microsoft.com"]`
+</ParamField>
+
+<ParamField body="not_q_organization_domains" type="string[]">
+  Exclude organizations with these domains
+</ParamField>
+
+<ParamField body="organization_location" type="string[]">
+  Company HQ/location
+</ParamField>
+
+<ParamField body="not_organization_location" type="string[]">
+  Exclude companies in these locations
+</ParamField>
+
+<ParamField body="organization_industry" type="string[]">
+  Include companies in these industries
+  
+  **Examples:** `["Technology", "Healthcare", "Finance"]`
+</ParamField>
+
+<ParamField body="organization_not_industry" type="string[]">
+  Exclude companies from these industries
+</ParamField>
+
+<ParamField body="organization_sic_industry" type="string[]">
+  Filter by SIC codes
+  
+  **Examples:** `["0919"]`
+</ParamField>
+
+<ParamField body="organization_not_sic_industry" type="string[]">
+  Exclude SIC codes
+</ParamField>
+
+<ParamField body="organization_naics_industry" type="string[]">
+  Filter by NAICS codes
+  
+  **Examples:** `["236117"]`
+</ParamField>
+
+<ParamField body="organization_not_naics_industry" type="string[]">
+  Exclude NAICS codes
+</ParamField>
+
+<ParamField body="organization_revenue_ranges" type="string[]">
+  Revenue ranges
+  
+  **Examples:** `["<$1M", "$1M-$10M", "$10M-$50M"]`
+</ParamField>
+
+### 📱 Technology & Product Filters
+
+<ParamField body="organization_technology" type="string[]">
+  Include if they use any of these tools
+  
+  **Examples:** `["Salesforce", "AWS", "React"]`
+</ParamField>
+
+<ParamField body="organization_all_technology" type="string[]">
+  Must use all listed technologies
+</ParamField>
+
+<ParamField body="not_organization_technology" type="string[]">
+  Exclude if using any of these technologies
+</ParamField>
+
+<ParamField body="organization_has_web_app" type="boolean">
+  Has a web application?
+</ParamField>
+
+<ParamField body="organization_has_mobile_app" type="boolean">
+  Has a mobile application?
+</ParamField>
+
+<ParamField body="organization_appstore_app_category" type="string[]">
+  AppStore categories
+  
+  **Examples:** `["News", "Finance"]`
+</ParamField>
+
+<ParamField body="organization_playstore_app_category" type="string[]">
+  PlayStore categories
+  
+  **Examples:** `["Car race", "Games"]`
+</ParamField>
+
+<ParamField body="organization_appstore_rating" type="object">
+  iOS app rating (1–5)
+  
+  **Format:** `{"min": 4, "max": 5}`
+</ParamField>
+
+<ParamField body="organization_playstore_rating" type="object">
+  Android app rating (1–5)
+  
+  **Format:** `{"min": 4, "max": 5}`
+</ParamField>
+
+<ParamField body="organization_appstore_review_count" type="object">
+  Number of iOS reviews
+  
+  **Format:** `{"min": 100, "max": 10000}`
+</ParamField>
+
+<ParamField body="organization_playstore_review_count" type="object">
+  Number of Android reviews
+  
+  **Format:** `{"min": 100, "max": 10000}`
+</ParamField>
+
+<ParamField body="organization_is_website_for_sale" type="boolean">
+  Website listed for sale?
+</ParamField>
+
+### 📈 Web Traffic & Ads
+
+<ParamField body="organization_website_traffic_total_monthly" type="object">
+  Total monthly visits
+  
+  **Format:** `{"min": 1000, "max": 100000}`
+</ParamField>
+
+<ParamField body="organization_website_traffic_monthly_organic" type="object">
+  Monthly organic traffic
+  
+  **Format:** `{"min": 1000, "max": 100000}`
+</ParamField>
+
+<ParamField body="organization_website_traffic_monthly_paid" type="object">
+  Monthly paid traffic
+  
+  **Format:** `{"min": 1000, "max": 100000}`
+</ParamField>
+
+<ParamField body="organization_monthly_google_adspend" type="object">
+  Estimated monthly Google Ads spend ($)
+  
+  **Format:** `{"min": 1000, "max": 50000}`
+</ParamField>
+
+### 💰 Funding Filters
+
+<ParamField body="organization_funding_amount" type="object">
+  Last round amount
+  
+  **Format:** `{"min": 1000000, "max": 100000000}`
+</ParamField>
+
+<ParamField body="organization_funding_total_amount" type="object">
+  Total raised funding
+  
+  **Format:** `{"min": 1000000, "max": 100000000}`
+</ParamField>
+
+<ParamField body="organization_funding_date" type="object">
+  Months since last funding round
+  
+  **Format:** `{"min": 1, "max": 24}`
+</ParamField>
+
+<ParamField body="organization_funding_type" type="string[]">
+  Funding stage
+  
+  **Examples:** `["Seed", "Series A", "Series B"]`
+</ParamField>
+
+<ParamField body="organization_funding_lead_investors" type="string[]">
+  Names of lead investors
+</ParamField>
+
+<ParamField body="organization_funding_number_of_investors" type="object">
+  Number of investors in the last round
+  
+  **Format:** `{"min": 1, "max": 10}`
+</ParamField>
+
+### 👨‍💼 Team & Roles
+
+<ParamField body="organization_roles_count" type="object[]">
+  Role distribution by department & range
+  
+  **Format:** `[{"department": "android_dev", "range": {"min": 1, "max": 100}}]`
+</ParamField>
+
+<ParamField body="organization_open_roles_count" type="object[]">
+  Open roles per department with range
+  
+  **Format:** `[{"department": "sales", "range": {"min": 1, "max": 10}}]`
 </ParamField>
 
 ## Response
@@ -123,37 +315,29 @@ Search for people using advanced filters and criteria. This endpoint allows you 
     <ResponseField name="country" type="string">
       Current country
     </ResponseField>
+    <ResponseField name="country_code" type="string">
+      ISO country code
+    </ResponseField>
+    <ResponseField name="country_region" type="string">
+      Geographic region (NORAM, EMEA, APAC, LATAM)
+    </ResponseField>
     <ResponseField name="email" type="string">
       Email address (when included)
     </ResponseField>
     <ResponseField name="mobile_number" type="string">
       Phone number (when included)
     </ResponseField>
+    <ResponseField name="organization_id" type="string">
+      Organization identifier
+    </ResponseField>
     <ResponseField name="organizations" type="object">
-      Current organization details
-    </ResponseField>
-  </Expandable>
-</ResponseField>
-
-<ResponseField name="pagination" type="object">
-  <Expandable title="Pagination Details">
-    <ResponseField name="total" type="number">
-      Total number of matching results
-    </ResponseField>
-    <ResponseField name="limit" type="number">
-      Number of results per page
-    </ResponseField>
-    <ResponseField name="offset" type="number">
-      Current offset
-    </ResponseField>
-    <ResponseField name="has_more" type="boolean">
-      Whether more results are available
+      Current organization details including name, domain, website, founded year, etc.
     </ResponseField>
   </Expandable>
 </ResponseField>
 
 <ResponseField name="statusCode" type="number">
-  HTTP status code (200 for success)
+  HTTP status code (201 for success)
 </ResponseField>
 
 <ResponseField name="message" type="string">
@@ -165,39 +349,64 @@ Search for people using advanced filters and criteria. This endpoint allows you 
 <CodeGroup>
 
 ```bash Basic Search
-curl --location 'https://api.tuesday.so/api/v1/people/search?title=Sales%20Director&location=California&limit=5' \
---header 'X-API-KEY: your-api-key-here'
+curl --location 'https://api.tuesday.so/api/v1/people/search' \
+--header 'X-API-KEY: your-api-key-here' \
+--header 'Content-Type: application/json' \
+--data '{
+  "page": 1,
+  "per_page": 25,
+  "person_titles": ["Software Engineer"],
+  "include_email": "include",
+  "include_phone": "include"
+}'
 ```
 
 ```bash Advanced Search with Company
-curl --location 'https://api.tuesday.so/api/v1/people/search?company_domain=salesforce.com&seniority=Director&include_email=include' \
---header 'X-API-KEY: your-api-key-here'
+curl --location 'https://api.tuesday.so/api/v1/people/search' \
+--header 'X-API-KEY: your-api-key-here' \
+--header 'Content-Type: application/json' \
+--data '{
+  "page": 1,
+  "per_page": 25,
+  "q_organization_domains": ["salesforce.com"],
+  "person_seniorities": ["Director"],
+  "include_email": "include"
+}'
 ```
 
 ```bash Industry and Size Filter
-curl --location 'https://api.tuesday.so/api/v1/people/search?industry=Technology&company_size=1001-5000&title=Engineering&country=US' \
---header 'X-API-KEY: your-api-key-here'
+curl --location 'https://api.tuesday.so/api/v1/people/search' \
+--header 'X-API-KEY: your-api-key-here' \
+--header 'Content-Type: application/json' \
+--data '{
+  "page": 1,
+  "per_page": 25,
+  "organization_industry": ["Technology"],
+  "person_titles": ["Engineering"],
+  "person_location": ["United States"]
+}'
 ```
 
 ```javascript JavaScript
-const searchParams = {
-  title: 'Marketing Director',
-  seniority: 'Director',
-  location: 'San Francisco',
-  industry: 'Technology',
-  company_size: '501-1000',
-  limit: 20,
+const searchPayload = {
+  page: 1,
+  per_page: 25,
+  person_titles: ['Marketing Director'],
+  person_seniorities: ['Director'],
+  person_location: ['San Francisco'],
+  organization_industry: ['Technology'],
   include_email: 'include'
 };
 
-const params = new URLSearchParams(searchParams);
-
 const response = await fetch(
-  `https://api.tuesday.so/api/v1/people/search?${params}`,
+  'https://api.tuesday.so/api/v1/people/search',
   {
+    method: 'POST',
     headers: {
-      'X-API-KEY': 'your-api-key-here'
-    }
+      'X-API-KEY': 'your-api-key-here',
+      'Content-Type': 'application/json'
+    },
+    body: JSON.stringify(searchPayload)
   }
 );
 
@@ -209,43 +418,48 @@ console.log(results);
 import requests
 
 url = "https://api.tuesday.so/api/v1/people/search"
-params = {
-    "title": "VP Sales",
-    "seniority": "VP",
-    "country": "US",
-    "industry": "Software",
-    "company_size": "201-500",
-    "limit": 25,
+payload = {
+    "page": 1,
+    "per_page": 25,
+    "person_titles": ["VP Sales"],
+    "person_seniorities": ["VP"],
+    "person_location": ["United States"],
+    "organization_industry": ["Software"],
     "include_email": "include",
     "include_phone": "include"
 }
 headers = {
-    "X-API-KEY": "your-api-key-here"
+    "X-API-KEY": "your-api-key-here",
+    "Content-Type": "application/json"
 }
 
-response = requests.get(url, params=params, headers=headers)
+response = requests.post(url, json=payload, headers=headers)
 results = response.json()
 
 for person in results['data']:
-    print(f"{person['name']} - {person['title']} at {person['organizations']['name']}")
+    print(f"{person['name']} - {person['title']} at {person['organizations.name']}")
 ```
 
 ```php PHP
 <?php
-$params = http_build_query([
-    'title' => 'Software Engineer',
-    'seniority' => 'Senior',
-    'location' => 'Austin',
-    'industry' => 'Technology',
-    'limit' => 15,
+$payload = [
+    'page' => 1,
+    'per_page' => 25,
+    'person_titles' => ['Software Engineer'],
+    'person_seniorities' => ['Senior'],
+    'person_location' => ['Austin'],
+    'organization_industry' => ['Technology'],
     'include_email' => 'include'
-]);
+];
 
 $ch = curl_init();
-curl_setopt($ch, CURLOPT_URL, "https://api.tuesday.so/api/v1/people/search?$params");
+curl_setopt($ch, CURLOPT_URL, "https://api.tuesday.so/api/v1/people/search");
 curl_setopt($ch, CURLOPT_RETURNTRANSFER, true);
+curl_setopt($ch, CURLOPT_POST, true);
+curl_setopt($ch, CURLOPT_POSTFIELDS, json_encode($payload));
 curl_setopt($ch, CURLOPT_HTTPHEADER, [
-    'X-API-KEY: your-api-key-here'
+    'X-API-KEY: your-api-key-here',
+    'Content-Type: application/json'
 ]);
 
 $response = curl_exec($ch);
@@ -268,40 +482,52 @@ foreach ($data['data'] as $person) {
 {
     "data": [
         {
-            "id": "tu_pac9h2k1x",
-            "name": "Sarah Johnson",
-            "first_name": "Sarah",
-            "last_name": "Johnson",
-            "title": "VP of Sales",
-            "seniority": "VP",
-            "linkedin_url": "https://www.linkedin.com/in/sarah-johnson-sales",
-            "job_start_date": "2022-06-15",
-            "city": "San Francisco",
-            "state": "California",
+            "city": "Washington",
             "country": "United States",
             "country_code": "US",
             "country_region": "NORAM",
-            "email": "sarah.johnson@techcorp.com",
-            "mobile_number": "+1 415-555-0123",
-            "organization_id": "tu_oac8x7m5n",
-            "organizations": {
-                "name": "TechCorp Solutions",
-                "linkedin_url": "https://www.linkedin.com/company/techcorp-solutions",
-                "primary_domain": "techcorp.com",
-                "website_url": "https://www.techcorp.com",
-                "founded_year": 2018,
-                "industry": "Technology",
-                "employee_count": 750
-            }
+            "email": "austin.gerner@actif.ai",
+            "first_name": "Austin",
+            "id": "tu_pac5zsepm",
+            "job_start_date": "2022-03-01",
+            "last_name": "Gerner",
+            "linkedin_url": "https://www.linkedin.com/in/austin-gerner-080413b4",
+            "mobile_number": "+1 570-872-7952",
+            "name": "Austin Gerner",
+            "organization_id": "tu_oabfyglnu",
+            "organizations.founded_year": 2019,
+            "organizations.linkedin_url": "https://www.linkedin.com/company/actifai",
+            "organizations.name": "Actifai",
+            "organizations.primary_domain": "actif.ai",
+            "organizations.website_url": "https://www.actif.ai",
+            "seniority": "Staff",
+            "state": "District of Columbia",
+            "title": "Senior Software Engineer"
+        },
+        {
+            "city": "Greenfield",
+            "country": "United States",
+            "country_code": "US",
+            "country_region": "NORAM",
+            "email": "phil.wingham@rtx.com",
+            "first_name": "Phil",
+            "id": "tu_pab5rkwdc",
+            "job_start_date": "2012-01-01",
+            "last_name": "Wingham",
+            "linkedin_url": "https://www.linkedin.com/in/phil-wingham-697200b",
+            "mobile_number": "+1 765-994-1888",
+            "name": "Phil Wingham",
+            "organization_id": "tu_oabstv4wl",
+            "organizations.linkedin_url": "https://www.linkedin.com/company/rtx",
+            "organizations.name": "Rtx",
+            "organizations.primary_domain": "rtx.com",
+            "organizations.website_url": "https://www.rtx.com",
+            "seniority": "Staff",
+            "state": "Indiana",
+            "title": "Senior Software Engineer Ii"
         }
     ],
-    "pagination": {
-        "total": 1247,
-        "limit": 10,
-        "offset": 0,
-        "has_more": true
-    },
-    "statusCode": 200,
+    "statusCode": 201,
     "message": "Success"
 }
 ```
